--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -8,6 +8,8 @@ import RightSidebar from '../components/RightSidebar/RightSidebar.astro';
 import * as CONFIG from '../config';
 import type { MarkdownHeading } from 'astro';
 import Footer from '../components/Footer/Footer.astro';
+import ScrollTopButton from '../components/ScrollTopButton.astro';
+import AddHeadingScript from '../components/AddHeadingScript.astro';
 
 type Props = {
 	frontmatter: CONFIG.Frontmatter;
@@ -139,25 +141,8 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`;
 				</aside>
 			</main>
 			<Footer />
-			<a href="#overview" class="btn btn-primary mx-auto fixed bottom-4 right-4 z-50">
-				🔝 맨 위로
-			</a>
+			<ScrollTopButton />
 		</div>
-		<script>
-			[...document.getElementById('article')?.querySelectorAll(':is(h1,h2,h3,h4)') ?? []]
-				.forEach((heading) => {
-					heading.classList.add('group')
-					const anchor = document.createElement('A');
-					anchor.innerText = '#';
-					anchor.setAttribute('href', '#' + heading.id);
-					anchor.setAttribute('class', 'hidden group-hover:inline');
-					anchor.onclick = () => {
-						navigator.clipboard.writeText(location.origin + location.pathname  + anchor.getAttribute('href'))
-							.then(() => { alert('링크를 복사했습니다.\n'+location.origin + location.pathname + anchor.getAttribute('href')) });
-					}
-					heading.appendChild(anchor)
-					
-				})
-		</script>
+		<AddHeadingScript />
 	</body>
 </html>
