--- a/src/layouts/SheetLayout.astro
+++ b/src/layouts/SheetLayout.astro
@@ -4,9 +4,6 @@ import HeadSEO from '../components/HeadSEO.astro';
 import * as CONFIG from '../config';
 import type { MarkdownHeading } from 'astro';
 
-// import Header from '../components/Header/Header.astro';
-// import Footer from '../components/Footer/Footer.astro';
-
 type Props = {
 	frontmatter: CONFIG.Frontmatter;
 	headings: MarkdownHeading[];
@@ -27,7 +24,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 	</head>
 
 	<body>
-		<main class="flex flex-col w-full h-fit max-w-6xl mx-auto gap-8 pt-4">
+		<main class="flex flex-col w-full h-fit max-w-6xl mx-auto">
 			<slot />
 		</main>
 	</body>
